--- a/.editorconfig
+++ b/.editorconfig
@@ -5,42 +5,24 @@ max_line_length = 100|off
 end_of_line = lf
 indent_style = space
 charset = utf8
-indent_size = 2
+indent_size = 4
 trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.sh]
 indent_size = 2
 
-[*.html]
-indent_size = 2
-
 [*.{js,json}]
 indent_size = 2
 
-[*.{css,styl,scss,less,sass}]
+[*.{css,scss,less,sass}]
 indent_size = 2
 
-[*.php]
-indent_size = 4
-
-[*.rb]
+[*.blade.php]
 indent_size = 2
-
-[*.py]
-indent_size = 4
 
 [*.txt]
 indent_size = 4
-
-[*.{c,cpp}]
-indent_size = 4
-trim_trailing_whitespace = false
-insert_final_newline = false
-
-[*.go]
-indent_size = 2
-indent_style = tab
 
 [*.md]
 trim_trailing_whitespace = false
